# bigfixed

./: .gitignore  Cargo.toml
old_tests/: add_digit.rs  bigfixed.rs  convert.rs  cutoff.rs  index.rs  position.rs  range.rs
src/: README.md  big_fixed.rs  big_fixed_c.rs  big_fixed_slice.rs  cutoff.rs  cutoff_scheme.rs  digit.rs  double_digit.rs  index.rs  lib.rs  macros.rs  main.rs  schemes.rs  tail.rs  with_bigint.rs
src/big_fixed/: big_fixed_vec.rs  convert.rs  cutoff.rs  exp.rs  index_ops.rs  ops.rs  ops_c.rs  position.rs  range.rs  rearrangements.rs
src/big_fixed/convert/: int.rs
src/big_fixed/ops/: add_digit.rs  addition.rs  index.rs
tests/: add_digit.rs  bigfixed.rs  convert.rs  cutoff.rs  double_digit.rs  index.rs  ops.rs  position.rs  range.rs
